text size and weight

--- a/ourtubehome/templates/how-it-works.html
+++ b/ourtubehome/templates/how-it-works.html
@@ -129,15 +129,15 @@
     <strong><p class="missionairy">Join us in our mission to create a massive ripple of generosity.</p></strong>
   </div>
   <div class="mission-details-one">
-    <strong><p style="font-family: 'Playfair Display', serif; font-size: larger;">Philanthropy Promotes Philanthropy</p></strong>
+    <p style="font-family: 'Playfair Display', serif; font-size: larger; font-weight: 400;"><strong>Philanthropy Promotes Philanthropy</strong></p>
     <p style="font-family: 'Playfair Display', serif; margin: 0;">Our-Tube empowers content creators to drive positive change through a unique philanthropic cycle. Creators initiate projects, raising funds from Our-Tube's supportive community. They then document their philanthropic efforts and share inspiring videos on social platforms. Finally, any revenue generated from these videos is reinvested back into Our-Tube by fueling the launch of their next impactful project. Together, we create a sustainable cycle of highly transparent giving, higher awareness and greater difference.</p>
   </div>
   <div class="mission-details-one">
-    <strong><p style="font-family: 'Playfair Display', serif; font-size: larger;">Philanthropy With a Personal Touch</p></strong>
+    <p style="font-family: 'Playfair Display', serif; font-size: larger;"><strong>Philanthropy With a Personal Touch</strong></p>
     <p style="font-family: 'Playfair Display', serif; margin: 0;">Our-Tube is a place where you fund projects of people you truly know and admire. Whether it's your favorite content creators, inspiring individuals, or passionate groups, Our-Tube aims to connect you to a plethora of projects that are making a difference in unique and creative ways.</p>
   </div>
   <div class="mission-details-one">
-    <strong><p style="font-family: 'Playfair Display', serif; font-size: larger;">Philanthropy With the Highest Transparency</p></strong>
+    <p style="font-family: 'Playfair Display', serif; font-size: larger;"><strong>Philanthropy With the Highest Transparency</strong></p>
     <p style="font-family: 'Playfair Display', serif; margin: 0;">Step into a world where you can witness the smiles YOUR support brings to life. Our-Tube offers content creators a dedicated space to engage with their loyal followers. Creators can not only receive donations but can also share updates and document progress on their own channel. We encourage you to leverage our platform to showcase the beauty and positivity you can create in the world through multiple projects on your channel. Join us on Our-Tube, and let's rewrite the narrative of giving together, one smile at a time.</p>
   </div>
  
