--- a/ourtubehome/templates/index.html
+++ b/ourtubehome/templates/index.html
@@ -126,8 +126,8 @@
 <section class="content">
  <div class="overall" id="overall">
 
-  <h1 class="cool-transition">Empowering content creators</h1>
-  <h1 class="cool-transition">to change lives</h1>
+  <h1 class="cool-transition"><strong>Empowering content creators</strong></h1>
+  <h1 class="cool-transition"><strong>to change lives</strong></h1>
   <a href="{% url 'funding_info' %}"><button class="donate-btn-btn">Start a project</button></a>
   
  </div>  
