--- a/ourtubehome/templates/how-it-works.html
+++ b/ourtubehome/templates/how-it-works.html
@@ -15,7 +15,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@400;600&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
           <title>How Our-tube works</title>
           <link rel="stylesheet" href="{% static 'stylingandallahh.css' %}">
          
