--- a/members/templates/projects/verification.html
+++ b/members/templates/projects/verification.html
@@ -60,7 +60,7 @@
                     <tr>
                         <td align="center">
 
-                                <button style="border: none; width: 170px; height: 45px; background-color: #0a383f; color: #fff; border-radius: 15px; cursor: pointer;">Complete verification</button>
+                              <a href="{% url 'verify_project' %}" style="text-decoration: none;">  <button style="border: none; width: 170px; height: 45px; background-color: #0a383f; color: #fff; border-radius: 15px; cursor: pointer; cursor: pointer;">VERIFY</button> </a>
  
                         </td>
                      </tr>
