Ill try one last time b4 dinner with Heart

--- a/members/templates/projects/verification.html
+++ b/members/templates/projects/verification.html
@@ -59,8 +59,8 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <form method = 'POST'>{% csrf_token %}
-                              <a href="https://www.our-tube.com{% url 'verify_project' %}" style="text-decoration: none;">  <button style="border: none; width: 170px; height: 45px; background-color: #0a383f; color: #fff; border-radius: 15px; cursor: pointer; cursor: pointer;" type="submit">VERIFY</button> </a>
+                            <form method = 'POST' action="https://www.our-tube.com{% url 'verify_project' %}">{% csrf_token %}
+                              <button style="border: none; width: 170px; height: 45px; background-color: #0a383f; color: #fff; border-radius: 15px; cursor: pointer; cursor: pointer;" type="submit">VERIFY</button>
                             </form>
                         </td>
                      </tr>
