--- a/members/templates/projects/verification.html
+++ b/members/templates/projects/verification.html
@@ -59,9 +59,9 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <form method = 'POST' action="https://www.our-tube.com{% url 'verify_project' %}">
-                              <button style="border: none; width: 170px; height: 45px; background-color: #0a383f; color: #fff; border-radius: 15px; cursor: pointer; cursor: pointer;" type="submit">VERIFY</button>
-                            </form>
+                            <a href="{{verification_url}}">
+                 <button style="border: none; width: 170px; height: 45px; background-color: #0a383f; color: #fff; border-radius: 15px; cursor: pointer; cursor: pointer;" type="submit">VERIFY</button>
+                </a>
                         </td>
                      </tr>
                 </table>
