--- a/members/templates/projects/verification.html
+++ b/members/templates/projects/verification.html
@@ -59,7 +59,7 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <a href="{{verification_url}}">
+                            <a href="https://www.our-tube.com{{verification_url}}">
                  <button style="border: none; width: 170px; height: 45px; background-color: #0a383f; color: #fff; border-radius: 15px; cursor: pointer; cursor: pointer;" type="submit">VERIFY</button>
                 </a>
                         </td>
