--- a/staticfiles/styleindex.css
+++ b/staticfiles/styleindex.css
@@ -8,10 +8,11 @@
     top: 14px;
     left: 50%;
     transform: translateX(-50%);
-   
+  
 }
 .logo img{
     width: 100%;
+  
     
 }
 
@@ -25,6 +26,7 @@
     list-style: none;
     margin: auto;
     height: 5.6rem;
+  
   
   }
   
@@ -49,6 +51,7 @@ li:hover{
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   left: 0;
   top: 0;
+  z-index: 999;
 }
 
 
@@ -175,9 +178,9 @@ h1 {
 
 }
 .cool-transition {
-  font-family: 'Lato', sans-serif;
-  font-weight: 600;
-  color: #f1f1f1;
+  font-family: 'Playfair Display', serif;
+  font-weight: 400;
+  color: #000;
   margin-bottom: 0em;
 }
 .overall{
@@ -198,6 +201,45 @@ h1 {
 .hidden{
   display: none;
 }
+
+footer {
+  background-color: #f4f4f4;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow-x:auto;
+  padding-top: 20px;
+  margin-bottom: 0;
+  z-index: 999;
+  
+}
+
+footer p {
+  margin: 0;
+  font-size: 14px;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
+}
+
+footer ul li {
+  font-size: 14px;
+  display: inline;
+  margin-right: 10px;
+}
+
+footer ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
 
 
 
@@ -282,7 +324,7 @@ background-attachment: fixed;
 }
 .fuck{
   color: black;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif; font-weight: 600;
   font-weight: 600;
   font-size: large;
 }
@@ -430,7 +472,7 @@ background-attachment: fixed;
   margin-top: 4.4rem;
  }
  h1{
-  font-size: 2.4rem;
+  font-size: 2.2rem;
  }
  .lichenbg{
   min-height: 60vh ;
@@ -460,13 +502,6 @@ background-attachment: fixed;
   }
   .lichenbgg{
     background-image: none;
-  }
-  body{
-
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    background-position: center center;
   }
 }
 
@@ -519,13 +554,7 @@ background-attachment: fixed;
   }
 }
 @media(max-width:465px){
-  body{
 
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-
-    background-position: center center;
-  }
 }
 @media(max-width:392px){
 .vinsmoke{
