--- a/members/static/fundingnowstyle.css
+++ b/members/static/fundingnowstyle.css
@@ -287,6 +287,7 @@ body{
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
       margin-top: 4vh;
       height: 540px;
+      width: 300px;
       display: flex;
       flex-direction: column;
       
@@ -392,7 +393,7 @@ body{
     }
     @media (max-width: 1025px) {
       .col-md-4 {
-        flex: 0 0 calc(50% - 2vw);
+
         max-width: calc(50% - 2vw);
       }
     
