--- a/members/templates/donation/donation_landing_page.html
+++ b/members/templates/donation/donation_landing_page.html
@@ -222,7 +222,7 @@ input.donation-box::-webkit-outer-spin-button {
     const csrftoken = getCookie('csrftoken');
 
     // Get the selected recipient's PayPal email or ID
-    var selectedRecipient = "abi.ramjee@gmail.com"; // Replace with the actual recipient
+    var selectedRecipient = "{{project.user.email}}"; // Replace with the actual recipient
     var donationId = '{{donation_id}}'
     function completeDonation(){
       var url = "{% url 'complete' %}"
