--- a/members/static/donationstyle.css
+++ b/members/static/donationstyle.css
@@ -523,6 +523,9 @@ font-family: 'Lato', sans-serif; text-align: center;
     margin-bottom: 0.8em;
     
 }
+.nle{
+  top: 40px;
+}
 }
 @media(max-width:392px){
   h1{
